--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-nuget.exe
+USTVADataClassLibrary/nuget.exe
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
