--- a/USTVADataClassLibrary/USTVADataClassLibrary.nuspec
+++ b/USTVADataClassLibrary/USTVADataClassLibrary.nuspec
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <id>Ustva.Data</id>
+    <version>1.0.0</version>
+    <title>USTVA Data Access</title>
+    <authors>Brett Burtson</authors>
+    <owners>Brett Burtson</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
